--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 beautifulsoup4==4.12.3
+joblib==1.4.0
 lxml==5.1.0
 numpy==1.26.4
+scikit-learn==1.4.2
+scipy==1.13.0
 soupsieve==2.5
+threadpoolctl==3.4.0
