--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # runs every Sunday at midnight
     - cron: '0 0 * * 0'
+  workflow_dispatch:
 
 jobs:
   check-and-recompute:
