--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,34 @@
+accelerate==0.30.1
+adapters==0.2.0
+annoy==1.17.3
 beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+filelock==3.13.1
+fsspec==2024.2.0
+huggingface-hub==0.23.0
+idna==3.7
+Jinja2==3.1.3
 joblib==1.4.0
 lxml==5.1.0
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.2.1
 numpy==1.26.4
+packaging==24.0
+psutil==5.9.8
+PyYAML==6.0.1
+regex==2024.5.15
+requests==2.31.0
+safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
 soupsieve==2.5
+sympy==1.12
 threadpoolctl==3.4.0
+tokenizers==0.15.2
+torch==2.2.2
+tqdm==4.66.4
+transformers==4.39.3
+typing_extensions==4.9.0
+urllib3==2.2.1
