--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,15 @@ jobs:
         if: env.submodule_updated == 'true'
         run: python run_spctr_recs.py
 
-      # step 6: commit and push changes if there are any
+      # step 6: run the unit tests
+      - name: Run unit tests
+        run: |
+          set +e  # Continue execution even if the tests fail
+          python tests.py > tests.log 2>&1
+          cat tests.log
+        continue-on-error: true
+
+      # step 7: commit and push changes if there are any
       - name: Commit and push changes
         if: env.submodule_updated == 'true'
         env:
