--- a/.github/workflows/update_tsvs_now.yml
+++ b/.github/workflows/update_tsvs_now.yml
@@ -1,4 +1,4 @@
-name: Update recommendations if DHQ repo changes
+name: Update recommendations manually
 
 on:
   schedule:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  check-and-recompute:
+  recompute-recommendations:
     runs-on: ubuntu-20.04
 
     steps:
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          submodules: true # Checkout submodules as well
+          submodules: true # checkout submodules as well
 
       # step 2: setup Python environment
       - name: Set up Python
@@ -29,31 +29,17 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
-      # step 4: check for submodule updates
-      - name: Check for submodule updates
-        id: submodule_check
-        run: |
-          git submodule update --remote
-          if [ "$(git status --porcelain)" != "" ]; then
-            echo "submodule_updated=true" >> $GITHUB_ENV
-          else
-            echo "submodule_updated=false" >> $GITHUB_ENV
-          fi
-
-      # step 5: rerun the computations if submodule is updated
+      # step 4: run recommendation systems
       - name: Run keyword-based recommendation system
-        if: env.submodule_updated == 'true'
         run: python run_kwd_recs.py
 
       - name: Run BM25 recommendation system
-        if: env.submodule_updated == 'true'
         run: python run_bm25_recs.py
 
       - name: Run SPECTER recommendation system
-        if: env.submodule_updated == 'true'
         run: python run_spctr_recs.py
 
-      # step 6: run the unit tests
+      # step 5: run the unit tests
       - name: Run unit tests
         run: |
           set +e  # Continue execution even if the tests fail
@@ -61,9 +47,8 @@ jobs:
           cat tests.log
         continue-on-error: true
 
-      # step 7: commit and push changes if there are any
+      # step 6: commit and push changes if there are any
       - name: Commit and push changes
-        if: env.submodule_updated == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -71,7 +56,5 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
           git add dhq-recs*.tsv
-          git submodule update --remote
-          git add dhq-journal
-          git commit -m "feat: update recommendations due to submodule update on ${TIMESTAMP}"
+          git commit -m "feat: update recommendations due to weekly update on ${TIMESTAMP}"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
