--- a/.github/workflows/update_tsvs_now.yml
+++ b/.github/workflows/update_tsvs_now.yml
@@ -54,4 +54,5 @@ jobs:
           TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
           git add dhq-recs*.tsv
           git commit -m "feat: update recommendations due to request on ${TIMESTAMP}"
+          git pull --rebase
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
