--- a/.github/workflows/update_tsvs_biweekly.yml
+++ b/.github/workflows/update_tsvs_biweekly.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Check for submodule updates
         id: submodule_check
         run: |
-          git submodule foreach 'git fetch origin main && git checkout origin/main && git pull origin main'
+          git submodule foreach 'git fetch origin static_site_generation && git checkout origin/static_site_generation && git pull origin static_site_generation'
           if [ "$(git status --porcelain)" != "" ]; then
             echo "submodule_updated=true" >> $GITHUB_ENV
           else
