--- a/.github/workflows/update_tsvs_now.yml
+++ b/.github/workflows/update_tsvs_now.yml
@@ -27,10 +27,10 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
-      # Step 4: Update submodules to the latest commit from static_site_generation branch
+      # Step 4: Update submodules to the latest commit from encoding_workflow branch
       - name: Update submodules to latest
         run: |
-          git submodule foreach 'git fetch origin static_site_generation && git checkout origin/static_site_generation && git pull origin static_site_generation'
+          git submodule foreach 'git fetch origin encoding_workflow && git checkout origin/encoding_workflow && git pull origin encoding_workflow'
 
       # Step 5: Run recommendation systems
       - name: Run keyword-based recommendation system
