--- a/.github/workflows/update_tsvs_biweekly.yml
+++ b/.github/workflows/update_tsvs_biweekly.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Check for submodule updates
         id: submodule_check
         run: |
-          git submodule foreach 'git fetch origin encoding_workflow && git checkout origin/encoding_workflow && git pull origin encoding_workflow'
+          git submodule foreach 'git fetch --depth=1 origin encoding_workflow && git checkout FETCH_HEAD'
           if [ "$(git status --porcelain)" != "" ]; then
             echo "submodule_updated=true" >> $GITHUB_ENV
           else
