--- a/.github/workflows/update_tsvs_biweekly.yml
+++ b/.github/workflows/update_tsvs_biweekly.yml
@@ -10,6 +10,15 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      # Step 0: Clear some of the cached tools
+      - name: Clear out some of the hostel tools cache
+        run: |
+          rm -rf /opt/hostedtoolcache/CodeQL
+          rm -rf /opt/hostedtoolcache/Ruby
+          rm -rf /opt/hostedtoolcache/node
+          rm -rf /opt/hostedtoolcache/go
+          rm -rf /opt/hostedtoolcache/PyPy
+          
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
